[project]
name = "api-security"
version = "0.1.0"
description = "Project to learn security in API development"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]
