[project]
name = "api-security"
version = "0.1.0"
description = "Project to learn security in API development"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.34.2",
    "tinydb>=4.8.2",
    "uvicorn>=0.48.0",
]
